testsuite/tests/effects-disallowed/when_test.compilers.reference
effect E : unit
Line 4, characters 31-32:
4 |    | effect E k when (continue k (); false) -> assert false
                                   ^
Error: Unbound value k

